--- a/escom-bpm-web/src/main/webapp/view/admin/objects-expl.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/objects-expl.xhtml
@@ -34,7 +34,7 @@
                             #{item.id}
                         </p:column>
                         <p:column headerText="#{bundle.Objects}">
-                            #{item.name}
+                            #{metadatesBean.getBundleName(item)}
                         </p:column>
 
                     </p:dataTable>
